--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -20,14 +20,17 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd backend
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
 
-      - name: Run FastAPI sanity check
+      - name: Run pytest
         run: |
-          cd backend
-          python -c "import server; print('Backend imports OK')"
+          pip install pytest pytest-asyncio
+          pytest backend/tests/ -v
+
+      - name: FastAPI health check
+        run: |
+          python -c "from backend.app import app; print('Backend app imports OK')"
 
   android-build:
     runs-on: ubuntu-latest
@@ -41,10 +44,13 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
-      - name: Gradle build
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Gradle build (Debug)
         run: |
           cd android
-          ./gradlew clean assembleDebug
+          ./gradlew clean assembleDebug --stacktrace
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
