Fix: Remove deprecated MaxPermSize JVM option and disable Gradle daemon in CI

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -58,7 +58,10 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean assembleDebug --stacktrace --no-daemon
+          ./gradlew clean assembleDebug --stacktrace --no-daemon --warning-mode=none
+        env:
+          GRADLE_OPTS: "-Xmx2048m"
+          ORG_GRADLE_PROJECT_daemon: "false"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
