--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,10 +1,7 @@
 # Gradle Configuration
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
+org.gradle.jvmargs=-Xmx2048m -Xms512m
 org.gradle.parallel=true
 org.gradle.caching=true
-
-# Disable deprecated Convention API
-org.gradle.unsafe.isolation=false
 
 # Kotlin Configuration
 kotlin.incremental=true
@@ -13,6 +10,3 @@ kotlin.incremental.useClasspathSnapshot=true
 # Android Configuration
 android.useAndroidX=true
 android.enableJetifier=true
-
-# Suppress deprecation warnings
-org.gradle.warning.mode=all
