--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -38,11 +38,14 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean bundleRelease --no-daemon \
+          ./gradlew clean bundleRelease --no-daemon --warning-mode=none \
             -Pandroid.injected.signing.store.file=../keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
+        env:
+          GRADLE_OPTS: "-Xmx2048m"
+          ORG_GRADLE_PROJECT_daemon: "false"
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
