Fix: Add --no-build-cache flag to clear stale Gradle cache in GitHub Actions

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean assembleDebug --stacktrace --no-daemon --warning-mode=none
+          ./gradlew clean assembleDebug --stacktrace --no-daemon --no-build-cache --warning-mode=none
         env:
           GRADLE_OPTS: "-Xmx2048m"
           ORG_GRADLE_PROJECT_daemon: "false"
