--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean bundleRelease --no-daemon --warning-mode=none \
+          ./gradlew clean bundleRelease --no-daemon --no-build-cache --warning-mode=none \
             -Pandroid.injected.signing.store.file=../keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
