--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,11 +1,13 @@
 # Gradle Configuration
-org.gradle.jvmargs=-Xmx2048m -Xms512m
+org.gradle.jvmargs=-Xmx2048m -Xms512m -Dkotlin.gradle.plugin.statistics=false
 org.gradle.parallel=true
-org.gradle.caching=true
+org.gradle.caching=false
+org.gradle.daemon=false
 
 # Kotlin Configuration
 kotlin.incremental=true
 kotlin.incremental.useClasspathSnapshot=true
+kotlin.gradle.plugin.statistics=false
 
 # Android Configuration
 android.useAndroidX=true
