--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -58,10 +58,9 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean assembleDebug --stacktrace --no-daemon --no-build-cache --warning-mode=none -Dkotlin.gradle.plugin.statistics=false
+          ./gradlew clean assembleDebug --stacktrace --info
         env:
           GRADLE_OPTS: "-Xmx2048m -Dkotlin.gradle.plugin.statistics=false"
-          ORG_GRADLE_PROJECT_daemon: "false"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
