CRITICAL FIX: Remove -D flags from jvmargs - keep ONLY in gradle.properties to prevent Gradle 9.3 daemon forking which triggers HasConvention errors

--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -44,7 +44,7 @@ jobs:
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
         env:
-          GRADLE_OPTS: "-Xmx2048m -Dkotlin.gradle.plugin.statistics=false"
+          GRADLE_OPTS: "-Xmx2048m"
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
