--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,10 +1,10 @@
 # Gradle Configuration
-org.gradle.jvmargs=-Xmx2048m -Xms512m -Dkotlin.gradle.plugin.statistics=false
+org.gradle.jvmargs=-Xmx2048m -Xms512m
 org.gradle.parallel=true
 org.gradle.caching=false
 org.gradle.daemon=false
 
-# Kotlin Configuration
+# Kotlin Configuration - CRITICAL: Disable statistics to prevent HasConvention errors
 kotlin.incremental=true
 kotlin.incremental.useClasspathSnapshot=true
 kotlin.gradle.plugin.statistics=false
