--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -60,7 +60,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean assembleDebug --stacktrace --info
         env:
-          GRADLE_OPTS: "-Xmx2048m -Dkotlin.gradle.plugin.statistics=false"
+          GRADLE_OPTS: "-Xmx2048m"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
