FINAL FIX: Re-add --no-daemon flag to command line + keep daemon=false in gradle.properties for DUAL enforcement - prevents daemon fork completely

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew clean assembleDebug --stacktrace --info
+          ./gradlew --no-daemon --info clean assembleDebug
         env:
           GRADLE_OPTS: "-Xmx2048m"
 
