COMPREHENSIVE AUDIT FIX: Add init.gradle script to disable Kotlin statistics at gradle initialization time (before daemon decision) - gradle.properties property alone was ineffective

--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew --no-daemon --info clean bundleRelease \
+          ./gradlew --no-daemon --init-script init.gradle --info clean bundleRelease \
             -Pandroid.injected.signing.store.file=../keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
