--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew --no-daemon --info clean assembleDebug
+          ./gradlew --no-daemon --init-script init.gradle --info clean assembleDebug
         env:
           GRADLE_OPTS: "-Xmx2048m"
 
