CRITICAL FIX: Multi-layer approach to disable BuildFlowService - environment variables + init.gradle + gradle properties
ROOT CAUSE: init.gradle System.setProperty alone insufficient - BuildFlowService property
isolation happens AFTER init script. Need environment variables at JVM startup level.

SOLUTION (Multi-layer Defense):
1. init.gradle: System.setProperty at startup + gradle.ext properties
2. Workflows: KOTLIN_COMPILER_EXECUTION_STRATEGY env var at JVM level
3. Workflows: ORG_GRADLE_PROJECT_ env var for Gradle property override
4. gradle.properties: Statistics disabled at property level (backup)

This ensures BuildFlowService sees disabled statistics BEFORE attempting HasConvention access.

Files Changed:
- android/init.gradle: Enhanced System.setProperty calls
- .github/workflows/bysel-ci.yml: Added JVM-level environment variables
- .github/workflows/bysel-playstore.yml: Added JVM-level environment variables
- android/gradle.properties: Comments clarified

Build should now succeed without daemon fork or HasConvention errors.

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -60,7 +60,9 @@ jobs:
           chmod +x ./gradlew
           ./gradlew --no-daemon --init-script init.gradle --info clean assembleDebug
         env:
-          GRADLE_OPTS: "-Xmx2048m"
+          GRADLE_OPTS: "-Xmx2048m -Dorg.gradle.jvmargs=-Xmx2048m"
+          KOTLIN_COMPILER_EXECUTION_STRATEGY: "daemon"
+          ORG_GRADLE_PROJECT_kotlin_gradle_plugin_statistics: "false"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
