--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,16 @@
 # Gradle Configuration
+# CRITICAL: Memory config only - NO -D flags (they trigger daemon fork in Gradle 9.3)
 org.gradle.jvmargs=-Xmx2048m -Xms512m
 org.gradle.parallel=true
 org.gradle.caching=false
 org.gradle.daemon=false
 
-# Kotlin Configuration - CRITICAL: Disable statistics to prevent HasConvention errors
+# Kotlin Configuration - CRITICAL: Statistics disabled at multiple levels
+# Property level (for gradle awareness)
 kotlin.incremental=true
 kotlin.incremental.useClasspathSnapshot=true
 kotlin.gradle.plugin.statistics=false
+# Also disabled via System.setProperty in init.gradle and environment variables
 
 # Android Configuration
 android.useAndroidX=true
