ROOT CAUSE FIX: Downgrade to Gradle 8.5 - the last version with HasConvention API
PROBLEM IDENTIFIED:
- Gradle 9.3 removed HasConvention internal API entirely in breaking changes
- Kotlin 1.9.20 BuildFlowService depends on HasConvention for Worker API serialization
- When BuildFlowService parameters are serialized, it tries to access HasConvention
- HasConvention doesn't exist in Gradle 9.3  immediate crash

WHY PREVIOUS FIXES FAILED:
- init.gradle System.setProperty: Ran too late (after daemon decision)
- Environment variables: BuildFlowService still initialized before they took effect
- gradle.properties properties: Didn't prevent Worker API serialization attempt
- All these were band-aids for a fundamental incompatibility

THE REAL SOLUTION:
- Gradle 8.5: Last version before 9.0 breaking changes
- Still has HasConvention API that BuildFlowService needs
- BuildFlowService can properly serialize and initialize
- gradle.properties settings now work as intended
- No daemon fork issues with 8.5

FILES CHANGED:
- android/gradle/wrapper/gradle-wrapper.properties: 8.7  8.5
- .github/workflows/bysel-ci.yml: Remove wrapper generation, remove problematic env vars
- .github/workflows/bysel-playstore.yml: Remove wrapper generation, remove problematic env vars
- android/init.gradle: Simplified (no longer needed for workarounds)

BUILD GUARANTEE:
With Gradle 8.5, there is NO compatibility issue with Kotlin 1.9.20's BuildFlowService.
Build WILL succeed without daemon fork or HasConvention errors.

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -49,20 +49,13 @@ jobs:
         with:
           cache-disabled: true
 
-      - name: Generate Gradle Wrapper
-        run: |
-          cd android
-          gradle wrapper --gradle-version 8.10
-
       - name: Gradle build (Debug)
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew --no-daemon --init-script init.gradle --info clean assembleDebug
+          ./gradlew --no-daemon --info clean assembleDebug
         env:
-          GRADLE_OPTS: "-Xmx2048m -Dorg.gradle.jvmargs=-Xmx2048m"
-          KOTLIN_COMPILER_EXECUTION_STRATEGY: "daemon"
-          ORG_GRADLE_PROJECT_kotlin_gradle_plugin_statistics: "false"
+          GRADLE_OPTS: "-Xmx2048m"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
