--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -24,11 +24,6 @@ jobs:
         with:
           cache-disabled: true
 
-      - name: Generate Gradle Wrapper
-        run: |
-          cd android
-          gradle wrapper --gradle-version 8.10
-
       - name: Decode Keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > keystore.jks
@@ -38,15 +33,13 @@ jobs:
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew --no-daemon --init-script init.gradle --info clean bundleRelease \
+          ./gradlew --no-daemon --info clean bundleRelease \
             -Pandroid.injected.signing.store.file=../keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
         env:
-          GRADLE_OPTS: "-Xmx2048m -Dorg.gradle.jvmargs=-Xmx2048m"
-          KOTLIN_COMPILER_EXECUTION_STRATEGY: "daemon"
-          ORG_GRADLE_PROJECT_kotlin_gradle_plugin_statistics: "false"
+          GRADLE_OPTS: "-Xmx2048m"
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
