--- a/android/init.gradle
+++ b/android/init.gradle
@@ -1,18 +1,3 @@
-// Gradle init script to disable Kotlin BuildFlowService BEFORE it initializes
-// This prevents HasConvention access errors in Gradle 9.3+
-
-// CRITICAL: Set at JVM startup level (not just gradle property level)
-System.setProperty("kotlin.gradle.plugin.statistics", "false")
-System.setProperty("kotlin.compiler.execution.strategy", "daemon")
-
-// Additional Gradle settings
+// Gradle 8.5 still has HasConvention API, so BuildFlowService works
+// This init script is kept for reference but gradle.properties handles all config
 gradle.ext.kotlin_statistics_disabled = true
-
-// Completely disable BuildService isolation to prevent HasConvention access
-if (gradle.startParameter.gradle != null) {
-    try {
-        gradle.startParameter.gradle.ext.kotlin_statistics_disabled = true
-    } catch (Exception e) {
-        // Fallback if isolation prevents this
-    }
-}
