--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -56,14 +56,18 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
 
       - name: Gradle build (Debug)
         run: |
           cd android
           chmod +x ./gradlew
           ./gradlew --no-daemon --info clean assembleDebug
+
+      - name: Run Android unit tests
+        run: |
+          cd android
+          ./gradlew --no-daemon --info testDebugUnitTest
+        continue-on-error: true
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
