Fix gradlew execute permissions in workflows and gitattributes

--- a/.github/workflows/bysel-ci.yml
+++ b/.github/workflows/bysel-ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Make gradlew executable
+        run: chmod +x android/gradlew
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
