--- a/.github/workflows/bysel-playstore.yml
+++ b/.github/workflows/bysel-playstore.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Make gradlew executable
+        run: chmod +x android/gradlew
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
