Fix: Add keystore setup to release workflow + Add architecture documentation
- Fixed bysel-release.yml to decode keystore from KEYSTORE_BASE64 secret
- Set KEYSTORE_PATH and signing environment variables before build
- Added SYSTEM_ARCHITECTURE_DEEP_DIVE.md with complete system design documentation
- Workflow now matches bysel-playstore.yml pattern and will succeed with secrets configured

--- a/.github/workflows/bysel-release.yml
+++ b/.github/workflows/bysel-release.yml
@@ -19,7 +19,18 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
+      - name: Generate keystore from secret
+        run: |
+          cd android/app
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > keystore.jks
+          ls -lah keystore.jks
+
       - name: Gradle build (AAB)
+        env:
+          KEYSTORE_PATH: ${{ github.workspace }}/android/app/keystore.jks
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           cd android
           ./gradlew clean bundleRelease
