--- a/.github/workflows/bysel-release.yml
+++ b/.github/workflows/bysel-release.yml
@@ -48,13 +48,30 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Bump versionCode and versionName
-        run: |
-          sed -i 's/versionCode [0-9]\+/versionCode ${{ github.run_number }}/' android/app/build.gradle.kts
-          sed -i 's/versionName ".*"/versionName "${{ github.ref_name }}"/' android/app/build.gradle.kts
-      - name: Commit changes
+      - name: Configure git
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git commit -am "Bump version for ${{ github.ref_name }}"
-          git push
+
+      - name: Bump versionCode and versionName
+        run: |
+          # Update versionCode with build number
+          sed -i 's/versionCode = [0-9]\+/versionCode = ${{ github.run_number }}/' android/app/build.gradle.kts
+          # Update versionName with tag (e.g., v1.0.8 -> 1.0.8)
+          TAG_VERSION="${{ github.ref_name }}"
+          VERSION="${TAG_VERSION#v}"  # Remove 'v' prefix if present
+          sed -i "s/versionName = \"[^\"]*\"/versionName = \"$VERSION\"/" android/app/build.gradle.kts
+          # Show changes
+          echo "Changes made:"
+          grep -A2 "versionCode\|versionName" android/app/build.gradle.kts | head -6
+
+      - name: Commit and push
+        run: |
+          if git diff --quiet; then
+            echo "ℹ️  No changes to commit"
+          else
+            git add android/app/build.gradle.kts
+            git commit -m "Bump version to ${{ github.ref_name }}"
+            git push
+            echo "✅ Version bumped to ${{ github.ref_name }}"
+          fi
