--- a/.github/workflows/bysel-release.yml
+++ b/.github/workflows/bysel-release.yml
@@ -2,6 +2,11 @@ name: BYSEL Release Build
 
 on:
   workflow_dispatch:   # manual trigger from GitHub Actions tab
+    inputs:
+      skip_build:
+        description: 'Skip build, only run version bump (rerun scenario)'
+        required: false
+        default: 'false'
   push:
     tags:
       - 'v*.*.*'       # e.g. v1.0.0
@@ -12,6 +17,7 @@ permissions:
 
 jobs:
   build-release:
+    if: github.event.inputs.skip_build != 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -46,6 +52,7 @@ jobs:
           path: android/app/build/outputs/bundle/release/app-release.aab
 
   version-bump:
+    if: always() && (needs.build-release.result != 'failure' || github.event.inputs.skip_build == 'true')
     runs-on: ubuntu-latest
     needs: build-release
     steps:
