Fix all build dependencies and imports - add Material Icons Extended, RoundedCornerShape, and DAO methods

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,17 +1,17 @@
 # Gradle Configuration
-# CRITICAL: Memory config only - NO -D flags (they trigger daemon fork in Gradle 9.3)
-org.gradle.jvmargs=-Xmx2048m -Xms512m
+org.gradle.jvmargs=-Xmx4096m -XX:+UseG1GC -XX:+ParallelGC
 org.gradle.parallel=true
-org.gradle.caching=false
-org.gradle.daemon=false
+org.gradle.workers.max=4
+org.gradle.caching=true
 
-# Kotlin Configuration - CRITICAL: Statistics disabled at multiple levels
-# Property level (for gradle awareness)
+# Kotlin Configuration - Optimized for Kotlin 1.9.20
 kotlin.incremental=true
 kotlin.incremental.useClasspathSnapshot=true
+kotlin.compiler.execution.strategy=daemon
 kotlin.gradle.plugin.statistics=false
-# Also disabled via System.setProperty in init.gradle and environment variables
 
 # Android Configuration
 android.useAndroidX=true
 android.enableJetifier=true
+android.targetSdkVersion=36
+android.compileSdkVersion=36
