--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
 # Gradle Configuration
-org.gradle.jvmargs=-Xmx4096m -XX:+UseG1GC -XX:+ParallelGC
+org.gradle.jvmargs=-Xmx4096m -XX:+UseG1GC
 org.gradle.parallel=true
 org.gradle.workers.max=4
 org.gradle.caching=true
