Fix build: correct Compose Compiler to 1.5.4 for Kotlin 1.9.20, add JDK 21 module opens for kapt, run compiler in-process

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,13 @@
 # Gradle Configuration
-org.gradle.jvmargs=-Xmx4096m -XX:+UseG1GC
+org.gradle.jvmargs=-Xmx4096m -XX:+UseG1GC \
+  --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
 org.gradle.parallel=true
 org.gradle.workers.max=4
 org.gradle.caching=true
@@ -7,7 +15,7 @@ org.gradle.caching=true
 # Kotlin Configuration - Optimized for Kotlin 1.9.20
 kotlin.incremental=true
 kotlin.incremental.useClasspathSnapshot=true
-kotlin.compiler.execution.strategy=daemon
+kotlin.compiler.execution.strategy=in-process
 kotlin.gradle.plugin.statistics=false
 
 # Android Configuration
