--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ sqlalchemy==2.0.23
 alembic==1.13.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
+yfinance>=0.2.36
+apscheduler>=3.10.4
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.1
