--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ python-multipart==0.0.6
 yfinance>=0.2.36
 apscheduler>=3.10.4
 numpy>=1.24.0
+pytz>=2023.3
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.1
